another z-index bug

--- a/static/css/scrollytelling.css
+++ b/static/css/scrollytelling.css
@@ -32,6 +32,7 @@ html {
 }
 
 article {
+  z-index: 2;
   position: relative;
   padding: 0 1rem;
   max-width: 20rem;
@@ -39,6 +40,7 @@ article {
 }
 
 figure {
+  z-index: 1;
   position: -webkit-sticky;
   position: sticky;
   left: 0;
@@ -73,7 +75,6 @@ figure p {
   margin: 0 auto 2rem auto;
   /* background-color:white; */
   color: black;
-  z-index: 2;
 }
 
 .step:last-child {
@@ -89,7 +90,6 @@ figure p {
   padding: 1rem;
   font-size: 1.5rem;
   background-color: #f3f3f3;
-  z-index: 2;
 }
 
 #lollipop-container {
